k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-hello-world
  labels:
    app: java-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-hello-world
  template:
    metadata:
      labels:
        app: java-hello-world
    spec:
      containers:
        - name: java-hello-world
          image: bandhu8/javahelloworld:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: log-volume
              mountPath: /var/log/app  # Store logs in this folder
      volumes:
        - name: log-volume
          emptyDir: {}
