k8s/filebeat.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat
spec:
  selector:
    matchLabels:
      app: filebeat
  template:
    metadata:
      labels:
        app: filebeat
    spec:
      containers:
        - name: filebeat
          image: docker.elastic.co/beats/filebeat:7.10.0
          volumeMounts:
            - name: log-volume
              mountPath: /usr/share/filebeat/logs
            - name: filebeat-config
              mountPath: /usr/share/filebeat/filebeat.yml
              subPath: filebeat.yml
      volumes:
        - name: log-volume
          hostPath:
            path: /var/log/containers
        - name: filebeat-config
          configMap:
            name: filebeat-config
# apiVersion: apps/v1
# kind: DaemonSet
# metadata:
#   name: filebeat
#   labels:
#     app: filebeat
# spec:
#   selector:
#     matchLabels:
#       app: filebeat
#   template:
#     metadata:
#       labels:
#         app: filebeat
#     spec:
#       containers:
#         - name: filebeat
#           image: docker.elastic.co/beats/filebeat:7.17.3
#           volumeMounts:
#             - name: varlog
#               mountPath: /var/log
#             - name: filebeat-config
#               mountPath: /usr/share/filebeat/filebeat.yml
#               subPath: filebeat.yml
#       volumes:
#         - name: varlog
#           hostPath:
#             path: /var/log
#         - name: filebeat-config
#           configMap:
#             name: filebeat-config
