k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-hello-world-service
spec:
  selector:
    app: java-hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30001
  type: NodePort
