k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: java-hello.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-hello-world-service
                port:
                  number: 80
